--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,20 @@
-# Compiled Object files, Static and Dynamic libs (Shared Objects)
-*.o
-*.a
-*.so
-
-# Folders
 _obj
-_test
-
-# Architecture specific extensions/prefixes
-*.[568vq]
 [568vq].out
-
-*.cgo1.go
-*.cgo2.c
-_cgo_defun.c
 _cgo_gotypes.go
-_cgo_export.*
-
-_testmain.go
-
-*.exe
-*.test
 *.prof
+cover.out
+_testmain.go
+*.exe
+_cgo_export.*
+# Architecture specific extensions/prefixes
+# Folders
+*.a
+# Compiled Object files, Static and Dynamic libs (Shared Objects)
+*.cgo2.c
+*.so
+*.[568vq]
+_test
+*.test
+*.o
+*.cgo1.go
+_cgo_defun.c
